Resolved issues with HTTPWSServer Fixed pages not using proper paths starting with /, causing wrong request to be sent Fixed content being loaded as a String, causing binary content to throw an Exception Added debugging for HTTP requests Fixed HttpBasicAuthenticationHandler not cutting off the string "Basic" before decoding Fixed usage of ByteBuf's for HTTPResponses Fixed HTTPHandlers not defaulting to index.html when no file is specified Fixed WsPanelHandler.doAudioHooksUpdate not creating JSONObject properly